Sun Apr 29 11:47:58 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* preproc.[ch] templates.[ch] variables.[ch] xslt.c xsltInternals.h
	  attributes.c extensions.[ch]: moved all stylesheet precomputation
	  at stylesheet loading time (stylesheet transform should be thread
	  safe now), improved params and variables evaluations (but optim
	  is not complete yet).
	* TODO: updated

Sat Apr 28 16:28:45 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltproc.c : changed the way --repeat works when
	  used twice

Sat Apr 28 16:19:06 CEST 2001 Bjorn Reese <breese@users.sourceforge.net>

	* libxslt/numbers.c libxslt/preproc.c tests/REC/test-7.7-3.out:
	  fixed default formatting

Sat Apr 28 14:20:29 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/preproc.c : fixed <xsl:sort/> bug reported by Ankh
	* libxslt/xsltproc.c : added an option to process HTML input

Thu Apr 26 21:13:59 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.c: Tony Gorski found a bug pointed by
	  a compiler on Tandem
	* tests/documents/result.xhtml: this results in a small
	  change in the output of this test

Thu Apr 26 16:33:36 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* test/general/bug-14*.* test/docs/bug-14*.xml: added testcase from
	  bug #53689

Wed Apr 25 16:58:11 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* transform.c: fixed text and cdata handling in xsl:copy
	* xslt.c : avoid crashing on invalid xslt input
	* test/general/bug-*.* test/docs/bug-*.xml : added a number of
	  bugs submitted to the regression tests

Wed Apr 25 12:42:48 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltproc.c : Renaud Chaillat provided a fix for #53535

Sun Apr 22 22:47:44 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in: updated to 0.8.0

Sun Apr 22 22:46:03 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* transform.c: fixed a bug introduced on handling #53401
