@@ -1,0 +1,2 @@
+<?xml version="1.0"?>
+<html><body><ul><li>a</li><li>b</li><li>c</li></ul></body></html>
